# codex-test2

./: .env.example  .gitignore  Dockerfile  Dockerfile.bundled  README.md  docker-compose.bundled.yml  docker-compose.yml  pyproject.toml
backend/app/: candidates.py  db.py  entity_reader.py  extractors.py  indexer.py  ingest.py  kokoro_client.py  main.py  normalizer.py  ollama_client.py  scene_splitter.py
backend/app/prompts/: extract_entities.md  extract_party_moments.md  summarize_entity.md  system_constraints.md
backend/scripts/: kokoro_generate.py
codex/items/: smoke-powder.md
codex/locations/: trollskull-manor.md
codex/npcs/: fala.md  rishall.md
codex/party/: elliandis.md  gororook.md  ivy.md  rowin.md  selise.md
codex/plot-threads/: a-poisoner-is-on-the-loose-in-waterdeep.md  the-party-needs-to-find-a-solution-to-reverse-the-unicorns-c.md  the-party-seeks-information-about-ander-and-ahmaergo-includi.md
codex/sessions/2019-11-26_firearms-produced-in-lantan-selise-asked-after-waking-up-row/: candidates.md  candidates_llm.md  merged.md  notes-travis.md
frontend/: _browse_grid.html  _entity.html  _entity_partial.html  _search_results.html  _session.html  browse.html  index.html  sessions.html  upload.html
frontend/static/: style.css
raw-notes/: testing.txt
scripts/: ingest.py  promote.py  setup.sh
