[project]
name = "adventure-codex"
version = "0.1.0"
description = "Player-side AID for a homebrew DnD campaign: ingests adventure logs, answers questions from local markdown, uses only local free models."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-frontmatter>=1.1",
    "pydantic>=2.9",
    "httpx>=0.27",
    "jinja2>=3.1",
    "edge-tts>=6.1",
    "python-multipart>=0.0.9",
    "eval_type_backport>=0.2; python_version < '3.10'",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.7"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]
